Name:                   regex-examples
Version:                1.1.0.0
Synopsis:               Tutorial, tests and example programs for regex
Description:            Tutorial, tests and example programs for regex,
                        a Regular Expression Toolkit for regex-base with
                        Compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros and test bench, a tutorial and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              Stable
bug-reports:            http://issues.regex.uk

Extra-Source-Files:
    README.md
    changelog
    data/2015-16-premierleague.txt
    data/access-errors.log
    data/access.log
    data/error.log
    data/events.log
    data/include-result.lhs
    data/league-table.md
    data/pp-result-doc.lhs
    data/pp-result-gen.lhs
    data/pp-test.lhs
    data/pcre-nginx-log-processor.txt
    data/tdfa-macros.txt
    data/pcre-macros.txt
    lib/cabal-masters/constraints-incl.cabal
    lib/cabal-masters/executables-incl.cabal
    lib/cabal-masters/library-incl.cabal
    lib/cabal-masters/mega-regex.cabal
    lib/cabal-masters/regex.cabal
    lib/cabal-masters/regex-examples.cabal
    lib/cabal-masters/test-extra-source-files-incl.cabal
    lib/mega-regex.cabal
    lib/version.txt
    src/Text/RE/PCRE/ByteString.hs
    src/Text/RE/PCRE/ByteString/Lazy.hs
    src/Text/RE/PCRE/Sequence.hs
    src/Text/RE/PCRE/String.hs
    src/Text/RE/PCRE/Text.hs
    src/Text/RE/PCRE/Text/Lazy.hs
    src/Text/RE/TDFA/ByteString.hs
    src/Text/RE/TDFA/ByteString/Lazy.hs
    src/Text/RE/TDFA/Sequence.hs
    src/Text/RE/TDFA/String.hs
    src/Text/RE/TDFA/Text.hs
    src/Text/RE/TDFA/Text/Lazy.hs


Cabal-Version:          >= 1.10

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                1.1.0.0


Executable re-gen-cabals
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-cabals.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , regex-base           >= 0.93
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2


Test-Suite re-gen-cabals-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-cabals.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , regex-base           >= 0.93
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2



Executable re-gen-modules
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-modules.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , regex-base           >= 0.93
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2


Test-Suite re-gen-modules-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-modules.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , regex-base           >= 0.93
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2



Executable re-include
    Hs-Source-Dirs:     examples

    Main-Is:            re-include.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , shelly               >= 1.6.1.2
      , text                 >= 1.2


Test-Suite re-include-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-include.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , shelly               >= 1.6.1.2
      , text                 >= 1.2



Executable re-nginx-log-processor
    Hs-Source-Dirs:     examples

    Main-Is:            re-nginx-log-processor.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , regex-with-pcre      
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , regex-base           >= 0.93
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2


Test-Suite re-nginx-log-processor-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-nginx-log-processor.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , regex-with-pcre      
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , regex-base           >= 0.93
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Executable re-prep
    Hs-Source-Dirs:     examples

    Main-Is:            re-prep.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , heredoc              >= 0.2.0.0
      , http-conduit         >= 2.1.7.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2


Test-Suite re-prep-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-prep.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , heredoc              >= 0.2.0.0
      , http-conduit         >= 2.1.7.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2



Executable re-sort-imports
    Hs-Source-Dirs:     examples

    Main-Is:            re-sort-imports.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2


Test-Suite re-sort-imports-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-sort-imports.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2



Executable re-tests
    Hs-Source-Dirs:     examples

    Main-Is:            re-tests.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , regex-with-pcre      
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , unordered-containers >= 0.2
      , utf8-string          >= 1


Test-Suite re-tests-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-tests.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , regex-with-pcre      
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , unordered-containers >= 0.2
      , utf8-string          >= 1



Executable re-top
    Hs-Source-Dirs:     examples

    Main-Is:            re-top.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , blaze-html           >= 0.8.1.0
      , bytestring           >= 0.10
      , data-default         >= 0.5.3
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2


Test-Suite re-top-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-top.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , blaze-html           >= 0.8.1.0
      , bytestring           >= 0.10
      , data-default         >= 0.5.3
      , directory            >= 1.2.1.0
      , filepath             >= 1.3.0.2
      , shelly               >= 1.6.1.2
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Executable re-tutorial
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2


Test-Suite re-tutorial-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Test-Suite re-tutorial-os-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
                        OverloadedStrings
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Executable re-tutorial-options
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-options.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , regex-with-pcre      
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2


Test-Suite re-tutorial-options-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-options.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , regex-with-pcre      
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Executable re-tutorial-replacing
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-replacing.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2


Test-Suite re-tutorial-replacing-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-replacing.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Executable re-tutorial-testbench
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-testbench.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2


Test-Suite re-tutorial-testbench-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-testbench.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Executable re-tutorial-tools
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-tools.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



Test-Suite re-tutorial-tools-test
    type:               exitcode-stdio-1.0
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-tools.lhs

    Other-Modules:
      TestKit

    Other-Extensions:   QuasiQuotes
    Default-Language:   Haskell2010

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , directory            >= 1.2.1.0
      , hashable             >= 1.2
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.2
      , shelly               >= 1.6.1.2
      , smallcheck           >= 1.1.1
      , tasty                >= 0.10.1.2
      , tasty-hunit          >= 0.9.2
      , tasty-smallcheck     >= 0.8.0.1
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2



-- Generated with re-gen-cabals
