Name:                   regex-with-pcre
Version:                0.10.0.2
Synopsis:               Toolkit for regex-base
Description:            A Regular Expression Toolkit for regex-base with
                        Compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros and test bench, a tutorial and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              RFC
bug-reports:            http://issues.regex.uk

Extra-Source-Files:
    README.markdown
    changelog

Cabal-Version:          >= 1.10

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                0.10.0.2



Library
    Hs-Source-Dirs:     .

    Exposed-Modules:
      Text.RE.PCRE
      Text.RE.PCRE.ByteString
      Text.RE.PCRE.ByteString.Lazy
      Text.RE.PCRE.RE
      Text.RE.PCRE.Sequence
      Text.RE.PCRE.String

    Other-Modules:
      Text.RE.Internal.QQ
      Text.RE.Internal.SearchReplace
      Text.RE.Internal.SearchReplace.PCRE
      Text.RE.Internal.SearchReplace.PCRE.ByteString
      Text.RE.Internal.SearchReplace.PCRE.ByteString.Lazy
      Text.RE.Internal.SearchReplace.PCRE.Sequence
      Text.RE.Internal.SearchReplace.PCRE.String
      Text.RE.Internal.SearchReplace.PCREEdPrime

    Default-Language:   Haskell2010

    Other-Extensions:
      AllowAmbiguousTypes
      CPP
      DeriveDataTypeable
      DeriveGeneric
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NoImplicitPrelude
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      TemplateHaskell
      TypeSynonymInstances
      UndecidableInstances

    if !impl(ghc >= 8.0)
      Other-Extensions: TemplateHaskell
    else
      Other-Extensions: TemplateHaskellQuotes

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                == 0.10.0.2
      , base                 >= 4 && < 5
      , base-compat          >= 0.6.0
      , bytestring           >= 0.10.2.0
      , containers           >= 0.4
      , regex-base           >= 0.93.2
      , regex-pcre-builtin   >= 0.94.4.8.8.35
      , regex-tdfa           >= 1.2.0
      , template-haskell     >= 2.7
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2.5.1


-- Generated with re-gen-cabals
