Name:                   regex-with-pcre
Version:                1.1.0.2
Synopsis:               Toolkit for regex-base
Description:            A regular expression toolkit for regex-base with
                        compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros with parsers and test bench, comprehensive
                        documentation, tutorials and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              Stable
bug-reports:            http://issues.regex.uk

Extra-Source-Files:
    README.md
    changelog

Cabal-Version:          >= 1.10

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                1.1.0.2



Library
    Hs-Source-Dirs:     .

    Exposed-Modules:
      Text.RE.PCRE
      Text.RE.PCRE.ByteString
      Text.RE.PCRE.ByteString.Lazy
      Text.RE.PCRE.Sequence
      Text.RE.PCRE.String
      Text.RE.PCRE.Text
      Text.RE.PCRE.Text.Lazy

    Other-Modules:
      Text.RE.ZeInternals.PCRE
      Text.RE.ZeInternals.SearchReplace.PCRE
      Text.RE.ZeInternals.SearchReplace.PCRE.ByteString
      Text.RE.ZeInternals.SearchReplace.PCRE.ByteString.Lazy
      Text.RE.ZeInternals.SearchReplace.PCRE.Sequence
      Text.RE.ZeInternals.SearchReplace.PCRE.String
      Text.RE.ZeInternals.SearchReplace.PCRE.Text
      Text.RE.ZeInternals.SearchReplace.PCRE.Text.Lazy
      Text.RE.ZeInternals.SearchReplace.PCREEdPrime
      Text.RE.ZeInternals.SearchReplace.TDFAEdPrime
      Text.RE.ZeInternals.TDFA

    Default-Language:   Haskell2010

    Other-Extensions:
      AllowAmbiguousTypes
      CPP
      DeriveDataTypeable
      DeriveGeneric
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NoImplicitPrelude
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      TemplateHaskell
      TypeSynonymInstances
      UndecidableInstances

    if !impl(ghc >= 8.0)
      Other-Extensions: TemplateHaskell
    else
      Other-Extensions: TemplateHaskellQuotes

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        regex                
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.3.1.0
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2


-- Generated with re-gen-cabals
