Name:                   regex
Version:                0.7.0.0
Synopsis:               Toolkit for regex-base
Description:            A Regular Expression Toolkit for regex-base with
                        Compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros and test bench, a tutorial and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              RFC
bug-reports:            http://issues.regex.uk

Extra-Source-Files:
    README.markdown
    changelog

Cabal-Version:          >= 1.16

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                0.7.0.0




Library
    Hs-Source-Dirs:     .
    Exposed-Modules:
      Text.RE
      Text.RE.Internal.AddCaptureNames
      Text.RE.Internal.EscapeREString
      Text.RE.Internal.NamedCaptures
      Text.RE.Internal.PreludeMacros
      Text.RE.Internal.QQ
      Text.RE.Types.IsRegex
      Text.RE.Types.Replace
      Text.RE.TDFA
      Text.RE.TDFA.ByteString
      Text.RE.TDFA.ByteString.Lazy
      Text.RE.TDFA.RE
      Text.RE.TDFA.Sequence
      Text.RE.TDFA.String
      Text.RE.TDFA.Text
      Text.RE.TDFA.Text.Lazy
      Text.RE.TestBench
      Text.RE.TestBench.Parsers
      Text.RE.Tools.Edit
      Text.RE.Tools.Grep
      Text.RE.Tools.Lex
      Text.RE.Tools.Sed
      Text.RE.Types.Capture
      Text.RE.Types.CaptureID
      Text.RE.Types.LineNo
      Text.RE.Types.Match
      Text.RE.Types.Matches
      Text.RE.Types.Options

    Default-Language:   Haskell2010
    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        array                >= 0.4
      , base                 >= 4 && < 5
      , base-compat          >= 0.6.0
      , bytestring           >= 0.10.2.0
      , containers           >= 0.4
      , hashable             >= 1.2.3.3
      , heredoc              >= 0.2.0.0
      , regex-base           >= 0.93.2
      , regex-tdfa           >= 1.2.0
      , regex-tdfa-text      >= 1.0.0.3
      , template-haskell     >= 2.7
      , text                 >= 1.2.0.6
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1.0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2.5.1


-- Generated with re-gen-cabals
